# any-to-md

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: basic_usage.py
scripts/: gcv_ocr.py  paddle_ocr_31.py
src/docmd_graph/: __init__.py  cli.py  config.py  graph.py  graph_crops.py  models.py  repair.py  run.py  state.py
src/docmd_graph/agents/: __init__.py  base.py  codex.py  cursor.py  factory.py  noop.py  workspace.py
src/docmd_graph/audit/: __init__.py  heuristics.py  screenshots.py
src/docmd_graph/parsers/: __init__.py  base.py  docling_parser.py  image_parser.py  markitdown_parser.py  pandoc_parser.py  pymupdf4llm_parser.py  router.py  text_parser.py
src/docmd_graph/prompts/: __init__.py  auditor.md  enhancer.md  fixer.md  graph_finder.md
src/docmd_graph/utils/: filesystem.py  json_tools.py  markdown.py  subprocess.py
tests/: test_json_tools.py  test_markdown_utils.py  test_workspace.py
