[project]
name = "docmd-graph"
version = "0.1.0"
description = "LangGraph pipeline for converting PDFs, Office documents, and images into Markdown folders with media and audit/fix loops."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "docmd-graph contributors" }]
keywords = ["markdown", "pdf", "docx", "ocr", "langgraph", "codex", "cursor", "document-conversion"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "langgraph>=0.2.74",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "pymupdf>=1.24.0",
  "pillow>=10.4.0",
]

[project.optional-dependencies]
pymupdf4llm = ["pymupdf4llm>=0.0.24"]
markitdown = ["markitdown[all]>=0.1.3"]
ocr = ["google-cloud-vision>=3.7"]
all = [
  "pymupdf4llm>=0.0.24",
  "markitdown[all]>=0.1.3",
  "google-cloud-vision>=3.7",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.8",
  "pyright>=1.1.390",
]

[project.urls]
Homepage = "https://example.local/docmd-graph"
Repository = "https://example.local/docmd-graph"

[project.scripts]
docmd = "docmd_graph.cli:app"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
